fix(icon position): consistent spacing for icons in chips
affects: @entur/chip

--- a/packages/chip/src/BaseChip.scss
+++ b/packages/chip/src/BaseChip.scss
@@ -31,4 +31,11 @@
     background-color: $colors-blues-blue20;
     border-color: transparent;
   }
+
+  &--leading-icon .eds-icon {
+    margin-right: $space-extra-small;
+  }
+  &--trailing-icon .eds-icon {
+    margin-left: $space-extra-small;
+  }
 }
